<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ergotera\'s Infrared Controller</string>
    <string name="placeholder_button_name">Button Name</string>
    <string name="description_button_image">Button\'s image</string>
    <string name="nav_header_title" translatable="false">Ergotera</string>
    <string name="nav_header_subtitle">Universal Infrared Controller\'s Application</string>
    <string name="nav_menu_nav_section_title">Navigation</string>
    <string name="nav_menu_nav_section_home">Home</string>
    <string name="nav_menu_nav_section_button_list">Buttons</string>
    <string name="nav_menu_nav_section_interface_list">Interfaces</string>
    <string name="nav_menu_extras_section_title">Extras</string>
    <string name="nav_menu_extras_section_settings">Settings</string>
    <string name="nav_menu_extras_section_help">Help</string>
    <string name="nav_menu_extras_section_report_bug">Report a bug</string>
    <string name="navigation_drawer_open">Open navigation menu</string>
    <string name="navigation_drawer_close">Close navigation menu</string>
    <string name="action_settings">Settings</string>
    <string name="button_creation_menu">Button Creation</string>
    <string name="error_unexpected">An unexpected error occurred.</string>
    <string name="error_database_add_button">An error occurred while trying to add the button.</string>
    <string name="error_database_get_button">An error occurred while trying to retrieve the button.</string>
    <string name="error_database_update_button">An error occurred while trying to update the button.</string>
    <string name="error_database_remove_button">An error occurred while trying to delete the button.</string>
    <string name="error_database_add_interface">An error occurred while trying to add the interface.</string>
    <string name="error_database_get_interface">An error occurred while trying to retrieve the interface.</string>
    <string name="error_database_update_interface">An error occurred while trying to update the interface.</string>
    <string name="error_database_remove_interface">An error occurred while trying to delete the interface.</string>
    <string name="name">Name</string>
    <string name="placeholder_interface_name">Interface name</string>
    <string name="welcome_to_the_app_title">Welcome on the configuration app for your infrared controller by Ergotera!</string>
    <string name="configuration_first_steps">Below are described the different steps to configure your first virtual remote.</string>
    <string name="configuration_step_1">You must create your virtual buttons first. These buttons must have a name, a sound or an infrared command and optionally an image.</string>
    <string name="configuration_step_2">Regroup a set of virtual buttons to create your virtual remote (interface).</string>
    <string name="configuration_step_3">Select your virtual remote and launch the action mode.</string>
    <string name="configuration_step_4">Connect your adapted buttons and enjoy!</string>
    <string name="empty_button_list">You have no buttons.</string>
    <string name="empty_interface_list">You have no interfaces.</string>
    <string name="number_of_buttons">Number of buttons</string>
    <string name="preview">Preview</string>
    <string name="select_image">Select an image</string>
    <string name="image_selected">Image selected</string>
    <string name="select_sound">Select a sound</string>
    <string name="sound_selected">Sound selected</string>
    <string name="button_style">Button\'s style</string>
    <string name="button_command">Button\'s command</string>
    <string name="record_command">Record a command</string>
    <string name="proceed_to_recording">Proceed to the recording of the infrared command.</string>
    <string name="command_recorded">Command recorded.</string>
    <string name="create_button">Create button</string>
    <string name="save_modifications">Save changes</string>
    <string name="delete_button">Delete button</string>
    <string name="delete_button_confirmation">Are you sure you want to delete this button?</string>
    <string name="button_deleted">Button deleted!</string>
    <string name="modifications_saved">Changes saved!</string>
    <string name="button_successfully_created">Button successfully created!</string>
    <string name="interface_creation_menu">Interface Creation</string>
    <string name="select_interface_buttons">Select buttons for the interface</string>
    <string name="delete_interface">Delete interface</string>
    <string name="delete_interface_confirmation">Are you sure you want to delete this interface?</string>
    <string name="interface_successfully_created">Interface successfully created!</string>
    <string name="interface_deleted">Interface deleted!</string>
    <string name="usb_ready">Device connected!</string>
    <string name="usb_permission_not_granted">Unable to establish USB communication; permission denied.</string>
    <string name="usb_not_connected">No device connected.</string>
    <string name="usb_disconnected">Device disconnected!</string>
    <string name="usb_device_not_supported">This device is not supported.</string>
    <string name="missing_required_fields">Please fill required fields to proceed.</string>
    <string name="create_interface">Create interface</string>
    <string name="error_database_name_not_unique">The name must be unique.</string>
    <string name="error_database_name_not_null">Please give your button a name.</string>
    <string name="error_database_sound_and_signal_null">Your button must either have a sound or a command.</string>
    <string name="error_database_empty_btn_list">Please select one or many buttons for your interface.</string>
    <string name="error_validation_required_field">This field is required.</string>
    <string name="error_serialcom_please_plug_in_device">Please connect your Ergotera\'s remote to continue.</string>
    <string name="permission_warning_cant_display_images">Unable to display images; permission denied.</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_mode">Action Mode</string>

</resources>