<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_create_interface_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreateInterfaceFragment">


    <ScrollView
        android:id="@+id/frag_create_interface_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/frag_create_interface_scrollable_linlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frag_create_interface_interface_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/placeholder_interface_name"
                android:textColor="@color/colorDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/frag_create_interface_interface_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/frag_create_interface_select_btns_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/select_interface_buttons"
                android:textColor="@color/colorDark"
                android:textSize="18sp" />

            <ScrollView
                android:id="@+id/frag_create_interface_selectable_btns_scrollview"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:id="@+id/frag_create_interface_selectable_btns_scrollable_linlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/frag_create_interface_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_interface"
                android:drawableLeft="@drawable/ic_menu_plus"
                android:textColor="@color/colorLight"
                android:backgroundTint="@color/colorSecondary"
                android:textAllCaps="false"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>